inital file commit

--- a/register.html
+++ b/register.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./css/footer.css"/>
 </head>
   <style type="text/css">
 .b{
@@ -20,7 +21,7 @@ background: linear-gradient(to bottom, #f9fcf7 0%,#f5f9f0 100%); /* W3C, IE10+, 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', endColorstr='#f5f9f0',GradientType=0 ); /* IE6-9 */
 }
 .panel-heading{
-    margin-top:50px;
+    margin-top:0px;
     width:400px;
     height:50px;
     z-index:2;
@@ -39,24 +40,29 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', end
   background:#ffffff;
   z-index:-1;  
   border:ridge 0.5px;
-  border-right:outset 0.3px;
+  border-right:outset 0.5px;
   border-left:inset 0.5px;
+  border-bottom:solid 0.5px;
+  border-bottom-left-radius:5px;
+  border-bottom-right-radius: 5px;
+
 }
-.panel-footer{
-    margin-bottom:50px;
-    width:400px;
-    height:50px;
-    z-index:3;
-    background:#F5F5F5;
-    border-top:groove 0.8px;
-    border-bottom:outset 2px;
-    border-right:outset 0.5px;
-    border-left:inset 0.5px;
-    border-bottom-left-radius:5px;
-    border-bottom-right-radius: 5px;
-}
+/*.panel-footer{*/
+/*    margin-bottom:50px;*/
+/*    width:400px;*/
+/*    height:50px;*/
+/*    z-index:3;*/
+/*    background:#F5F5F5;*/
+/*    border-top:groove 0.8px;*/
+/*    border-bottom:outset 2px;*/
+/*    border-right:outset 0.5px;*/
+/*    border-left:inset 0.5px;*/
+/*    border-bottom-left-radius:5px;*/
+/*    border-bottom-right-radius: 5px;*/
+/*}*/
   </style>
 <body>
+  <script src="./script/header.js"></script>
   <div class="container-fluid">
       <div class="col-md-12">
           <h1 style="font-weight:800;text-align:center">建立您的旅遊觀光帳戶</h1>
@@ -76,7 +82,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', end
 <div class="col-md-1"><i class="fas fa-search" style="font-size:3em;"></i></div>
 </div>
 <br>
-<h5 style="text-align:center">隨時隨地使用所有服務</h3>
+<h5 style="text-align:center">隨時隨地使用所有服務</h5>
 <img style="display:block; margin:auto;" src="./imgs/re1.png"></img>
 		</div>
 		<div class="col-md-6">
@@ -143,9 +149,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', end
 </div>
 
                         </div>
-                   <div class="panel-footer">
-            
-                   </div>    
+
                 </div>
             </div>
         </div>   
@@ -153,6 +157,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', end
 	</div>
 </div>
 
-
+<!--<script src="./script/footer.js"></script>-->
 </body>
 </html>
