--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,12 @@
   <link rel="stylesheet" href="./css/padding.css"/>
   <link rel="stylesheet" href="./css/footer.css"/>
   <link rel="stylesheet" href="./css/csize.css"/>
+ <link rel="stylesheet" href="./css/head.css"/>
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-  
+//   <script>
+//   if(screen.width<768){
+// document.getElementById("sign").style.border="none";}
+// </script>
 </head>
 <style type="text/css">
 body{
@@ -43,37 +47,43 @@ right:0px;
 a{
   letter-spacing: 3px;
 }
-
+#tilte_bt{
+	color:black;
+}
+#title_nav{
+	color:#007799!important;
+}
 </style>
 <body>
-<nav class="navbar navbar-expand-md fixed-top"style="background-color:#e3f2fd;">
-  <a class="navbar-brand" href="#">Attraction</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#" style="color:black">行程規劃</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"style="color:black">相片集</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#"style="color:black">附近景點</a>
-      </li> 
-    </ul>
-    <ul class="navbar-nav ml-auto">
+ <script src="./script/header.js"></script>
+<!--<nav class="navbar navbar-expand-md fixed-top"style="background-color:#e3f2fd;">-->
+<!--  <a class="navbar-brand" href="#">Attraction</a>-->
+<!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
+<!--  <div class="collapse navbar-collapse" id="collapsibleNavbar">-->
+<!--    <ul class="navbar-nav">-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="#" style="color:black">行程規劃</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="#"style="color:black">相片集</a>-->
+<!--      </li>-->
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link" href="#"style="color:black">附近景點</a>-->
+<!--      </li> -->
+<!--    </ul>-->
+<!--    <ul class="navbar-nav ml-auto">-->
          
-      <li class="nav-item" >
-        <a class="nav-link" href="sign.html"style="color:black; border: 2px solid #008B8B	;border-radius:5px"title="Sign">登入</a>
-      </li> 
-    </ul>
+<!--      <li class="nav-item" >-->
+<!--        <a class="nav-link" href="sign.html"style="color:black; border: 2px solid #008B8B	;border-radius:5px"title="Sign">登入</a>-->
+<!--      </li> -->
+<!--    </ul>-->
    
    
 
-  </div>  
-</nav>
+<!--  </div>  -->
+<!--</nav>-->
 <div id="demo" class="carousel slide" data-ride="carousel" style="padding-top:60px">
 
   <!--輪播中間按鈕設定-->
@@ -197,48 +207,49 @@ a{
 <section  style="text-align:center">
 <a  href="#"style="display:block;text-decoration:none"><i class="far fa-envelope" style="color:white;font-size:2em;margin-top:25px;"></i><span style="padding-left:15px;letter-spacing:3px;color:white">Conact</span></a>
 </section>
-  <footer>
-    <div class="footer" id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4  col-md-4 col-sm-4 col-xs-6"style="text-align:center">
-                    <h3 >關於Attractions</h3>
-                </div>
-                <div class="col-lg-4  col-md-4 col-sm-4 col-xs-6"style="text-align:center">
-                    <h3> 教學指南 </h3>
-                    <ul>
-                        <li> <a href="#">如何操作 How to use </a> </li>
-                        <li> <a href="#"> 如何註冊 </a> </li>
-                        <li> <a href="#"> 常見問題 </a> </li>
-                    </ul>
-                </div>
-                <div class="col-lg-4  col-md-4 col-sm-4 col-xs-6"style="text-align:center">
-                    <h3> 會員權益 </h3>
-                    <ul>
-                        <li> <a href="#"> 個人隱私保密政策 </a> </li>
-                        <li> <a href="#"> 會員相關規定 </a> </li>
-                        <li> <a href="#"> 服務條款 </a> </li>
-                        <li> <a href="#"> 異業合作 </a> </li>
-                    </ul>
-                </div>
+<script src="./script/footer.js"></script>
+<!--  <footer>-->
+<!--    <div class="footer" id="footer">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-4  col-md-4 col-sm-4 col-xs-6"style="text-align:center">-->
+<!--                    <h3 >關於Attractions</h3>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4  col-md-4 col-sm-4 col-xs-6"style="text-align:center">-->
+<!--                    <h3> 教學指南 </h3>-->
+<!--                    <ul>-->
+<!--                        <li> <a href="#">如何操作 How to use </a> </li>-->
+<!--                        <li> <a href="#"> 如何註冊 </a> </li>-->
+<!--                        <li> <a href="#"> 常見問題 </a> </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--                <div class="col-lg-4  col-md-4 col-sm-4 col-xs-6"style="text-align:center">-->
+<!--                    <h3> 會員權益 </h3>-->
+<!--                    <ul>-->
+<!--                        <li> <a href="#"> 個人隱私保密政策 </a> </li>-->
+<!--                        <li> <a href="#"> 會員相關規定 </a> </li>-->
+<!--                        <li> <a href="#"> 服務條款 </a> </li>-->
+<!--                        <li> <a href="#"> 異業合作 </a> </li>-->
+<!--                    </ul>-->
+<!--                </div>-->
 
-                </div>
-            </div>
+<!--                </div>-->
+<!--            </div>-->
             <!--/.row--> 
-        </div>
+<!--        </div>-->
         <!--/.container--> 
-    </div>
+<!--    </div>-->
     <!--/.footer-->
     
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="pull-left"> Copyright © 2018 Attractions Team. All right reserved. </p>
-            <div class="pull-right">
-            </div>
-        </div>
-    </div>
+<!--    <div class="footer-bottom">-->
+<!--        <div class="container">-->
+<!--            <p class="pull-left"> Copyright © 2018 Attractions Team. All right reserved. </p>-->
+<!--            <div class="pull-right">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
     <!--/.footer-bottom--> 
-</footer>
+<!--</footer>-->
 
 </body>
 </html>
