--- a/sign.html
+++ b/sign.html
@@ -9,7 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
- 
+ <link rel="stylesheet" href="./css/footer.css"/>
   <style type="text/css">
 .b{
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f9fcf7+0,f5f9f0+100;L+Green+3D */
@@ -20,7 +20,7 @@ background: linear-gradient(to bottom, #f9fcf7 0%,#f5f9f0 100%); /* W3C, IE10+, 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', endColorstr='#f5f9f0',GradientType=0 ); /* IE6-9 */
 }
 .panel-heading{
-    margin-top:50px;
+    margin-top:70px;
     width:400px;
     height:50px;
     z-index:2;
@@ -57,7 +57,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', end
 }
   </style>
 </head>
+<script src="./script/header.js"></script>
 <body class="b">
+    <template id="navbar"></template>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 offset-md-4" id="accountb" style="text-align:center">
@@ -103,7 +105,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fcf7', end
             </div>
         </div>   
         
-        
+        <script src="./script/footer.js"></script>
 </body>
 
 </html>
